# product_list_manager

./: .gitignore  README.md  package-lock.json  pyproject.toml
api_docs/: urls.py  views.py
backend/: README.md  pyproject.toml
backend/stock/: admin.py  models.py  serializers.py  urls.py  views.py
backend/stock/migrations/: 0002_alter_products_price.py  0004_product_description.py
backend/stock_manager/: settings.py  urls.py
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx  ErrorElement.jsx  index.css  main.jsx
frontend/src/components/: AuthForm.jsx  EditForm.jsx  EditForm.module.css  Form.module.css  MainNav.jsx  MainNav.module.css  Notification.jsx  Notification.module.css  ProductForm.jsx
frontend/src/context/: AppContext.jsx
frontend/src/layouts/: FormLayout.jsx  FormLayout.module.css  ProductLayout.jsx  ProductLayout.module.css
frontend/src/routes/: Authentication.jsx  Delete.jsx  ProductAdd.jsx  ProductDetail.jsx  ProductEdit.jsx  ProductsList.jsx  Root.jsx
frontend/src/utils/: auth.jsx
stock/: models.py  urls.py  views.py
stock/migrations/: 0001_initial.py  0003_rename_products_product.py
stock_manager/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  serializers.py  serilizers.py  urls.py  views.py
users/migrations/: 0001_initial.py
